Add platform file tags for selective pulls
